--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/magnific-popup.css">
     <link rel="stylesheet" href="css/flaticon.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="./Bootstrap4/bootstrap.css">
 </head>
 
 <body>
@@ -737,17 +738,8 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBVWaKrjvy3MaE7SQ74_uJiULgl1JY0H2s&sensor=false" type="4342065411bf8242d830359b-text/javascript"></script>
     <script src="js/google-map.js" type="4342065411bf8242d830359b-text/javascript"></script>
     <script src="js/main.js" type="4342065411bf8242d830359b-text/javascript"></script>
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13" type="4342065411bf8242d830359b-text/javascript"></script>
-    <script type="4342065411bf8242d830359b-text/javascript">
-        window.dataLayer = window.dataLayer || [];
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
 
-        gtag('config', 'UA-23581568-13');
-    </script>
     <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="4342065411bf8242d830359b-|49" defer=""></script>
 </body>
 
