--- a/product.html
+++ b/product.html
@@ -498,7 +498,37 @@ View All
             </div>
         </div>
     </footer>
+    <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
 
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+                </div>
+                <div class="modal-body">
+                    <div class="">
+                        <img style="height: 100%; width: 100%;" id="modalimg" src="" alt="">
+                    </div>
+                    <div class="">
+                        <h5 class="modal-title" id="staticBackdropLabel">Modal title</h5>
+                        <div class="description" id="description">
+
+                        </div>
+                        <div>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button class="btn btn-primary"><span class="price" id="modalprice"></span></button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
+                </div>
+            </div>
+        </div>
+    </div>
     <div id="ftco-loader" class="show fullscreen"><svg class="circular" width="48px" height="48px"><circle class="path-bg" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke="#eeeeee" /><circle class="path" cx="24" cy="24" r="22" fill="none" stroke-width="4" stroke-miterlimit="10" stroke="#F96D00" /></svg></div>
     <script src="js/jquery.min.js" type="06f6cd72955b76ce33cdc06a-text/javascript"></script>
     <script src="js/jquery-migrate-3.0.1.min.js" type="06f6cd72955b76ce33cdc06a-text/javascript"></script>
@@ -516,17 +546,7 @@ View All
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.13.1/js/bootstrap-select.min.js" type="06f6cd72955b76ce33cdc06a-text/javascript"></script>
     <script src="js/main.js" type="06f6cd72955b76ce33cdc06a-text/javascript"></script>
 
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13" type="06f6cd72955b76ce33cdc06a-text/javascript"></script>
-    <script type="06f6cd72955b76ce33cdc06a-text/javascript">
-        window.dataLayer = window.dataLayer || [];
 
-        function gtag() {
-            dataLayer.push(arguments);
-        }
-        gtag('js', new Date());
-
-        gtag('config', 'UA-23581568-13');
-    </script>
     <script src="https://ajax.cloudflare.com/cdn-cgi/scripts/7089c43e/cloudflare-static/rocket-loader.min.js" data-cf-settings="06f6cd72955b76ce33cdc06a-|49" defer=""></script>
 </body>
 <script src="./product.js"></script>
